spectate menu and behaviour decoupling